--- a/collaborate1.0/index.html
+++ b/collaborate1.0/index.html
@@ -15,7 +15,7 @@
 		<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
 		<link type="text/css" href="assets/css/style.css" rel="stylesheet" />
-		<link type="text/css" href="assets/css/demos/photo.css" rel="stylesheet" />
+		<link type="text/css" href="assets/css/photo.css" rel="stylesheet" />
 		<script src="assets/js/modernizr-custom.js"></script>
   </head>
   <body>
